# BasicShell

./: CMakeLists.txt
include/: Reader.h  Screen.h
src/: Reader.cpp  Screen.cpp  main.cpp
